recursion.lessons.recursion.dragoncurve.DragonCurve1.scala.code
def dragon(order:Int, x:Double, y:Double, z:Double, t:Double) {
	var u:Double =0
	var v:Double =0
	orer match {
		case 1 => setPos(x,y)
				allerVers (z,t)
	}
}
